--- a/HIDDENBE/package.json
+++ b/HIDDENBE/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "14.x",
-    "npm": "6.14.15"
+    "node": "18.15.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
